             requests, adding them to a set and sending in parallel.

Severity   : normal
Bugzilla   : 12417
Description: Disable most debugging by default
Details    : To improve performance, disable most logging (for debug purposes)
	     by default.  VFSTRACE, RPCTRACE, and DLMTRACE are now off by
	     default, and HA includes fewer messages.

--------------------------------------------------------------------------------

2007-05-03  Cluster File Systems, Inc. <info@clusterfs.com>
       * version 1.6.0.1
       * bug fixes

Severity   : normal
Frequency  : on some architectures
Bugzilla   : 12404
Description: 1.6 client sometimes fails to mount from a 1.4 MDT
Details    : Uninitialized flags sometimes cause configuration commands to
	     be skipped.

Severity   : normal
Frequency  : patchless clients only
Bugzilla   : 12391
Description: missing __iget() symbol export
Details    : The __iget() symbol export is missing.  To avoid the need for
	     this on patchless clients the deathrow inode reaper is turned
	     off, and we depend on the VM to clean up old inodes.  This
	     dependency was during via the fix for bug 12181.

Severity   : normal
Frequency  : always
Bugzilla   : 12848
Description: sanity.sh fail: test_52b
Details    : The ll_inode_to_ext_flags() has a glitch which makes MDS return
             incorrect inode's flags to client.

--------------------------------------------------------------------------------

2007-04-19  Cluster File Systems, Inc. <info@clusterfs.com>
       * version 1.6.0
       * CONFIGURATION CHANGE.  This version of Lustre WILL NOT
	 INTEROPERATE with older versions automatically.  In many cases a
	 special upgrade step is needed. Please read the
	 user documentation before upgrading any part of a 1.4.x system.
       * WARNING: Lustre configuration and startup changes are required with
	 this release.  See https://mail.clusterfs.com/wikis/lustre/MountConf
	 for details.
       * Support for kernels: